<resources>
    <string name="app_name">ChatEver</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="mobile">Mobile Number</string>
    <string name="next">Next</string>
    <string name="verification_code">Verification Code</string>h
    <string name="enter_code">Please enter the verification code sent to your mobile number</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Location is require for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="Captions">Captions</string>
    <string name="men">Men</string>
    <string name="none">None</string>
    <string name="women">Women</string>
    <string name="both">Both</string>
    <string name="gender">Gender</string>
    <string name="others">Others</string>
    <string name="no_filter">No Filter</string>
    <string name="new_update_Available">App new update avaliable. Please update your app.</string>
    <string name="logout">Are you sure you wants to logout ?</string>
    <string name="login">Login</string>

    <string-array name="list_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
</resources>