<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_mobile"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >


        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/mobile"
            android:inputType="number"
            android:paddingVertical="15dp"
            android:paddingStart="120dp"
            android:paddingEnd="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
        <com.hbb20.CountryCodePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            android:layout_marginLeft="10sp"
            android:id="@+id/ccp"
            app:ccp_defaultPhoneCode="91"
            app:ccp_contentColor="@color/white"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_chat_left"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        />

</LinearLayout>