<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    android:orientation="vertical"
    tools:context=".ProfileActivity">



    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        android:id="@+id/imgUser"
        android:scaleType="centerCrop"
        app:riv_oval="true"
        android:src="@drawable/user" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_edit"
        app:civ_border_color="@color/white"
        app:civ_border_width="1dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="-34dp"
        android:id="@+id/imgEdit"
        app:civ_circle_background_color="@color/white"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/name"
        android:padding="15dp"
        android:id="@+id/edtName"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:hint="Select your Gender"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:id="@+id/spGender"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="8dp"
        app:spinner_divider_color="@color/white"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.4dp"
        app:spinner_item_array="@array/list_gender"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/app_color"
        app:spinner_popup_elevation="14dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:maxHeight="200dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:maxLength="200"
        android:background="@drawable/bg_edittext"
        android:hint="@string/Captions"
        android:padding="15dp"
        android:gravity="start"
        android:id="@+id/edtCaptions"
        android:textColorHint="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="30dp"

        android:background="@drawable/bg_chat_left"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        />

</LinearLayout>